--- a/style.css
+++ b/style.css
@@ -1,109 +1,736 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;800&family=Roboto:ital,wght@0,400;0,500;0,700;1,300&display=swap');
-*{
-    padding: 0;
-    margin: 0;
-box-sizing: border-box;
-font-family: 'Inter', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
 }
 
 /* GENERICS */
 
-a, li{
-    text-decoration: none;
-    list-style-type: none;
+a,
+li {
+  text-decoration: none;
+  list-style-type: none;
 }
-.row{
-    width: 100%;
-    max-width: 1280px;
-    margin: 0 auto;
+.row {
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
 }
-.root{
-    padding:32px;
-    width:100%
-    
+.root {
+  padding: 32px;
+  width: 100%;
 }
-img{
-    width: 100%;
+img {
+  width: 100%;
+}
+.purple {
+  color: #6415ff;
+}
+h2 {
+  font-size: 48px;
+  margin: 16px 0 0;
+  color: #243e63;
+  font-weight: 800;
+}
+h6 {
+  font-size: 20px;
+  color: #243e63;
+  letter-spacing: 0.5px;
+  font-weight: 600;
+}
+.h5__span {
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 3px;
+  margin: 0 0 16px 0;
+}
+p {
+  font-size: 18px;
+  color: #7c8ba1;
+  width: 100%;
+  line-height: 1.7;
+}
+h3 {
+  color: #243e63;
+  font-size: 24px;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+.btn {
+  width: 100%;
+  max-width: 160px;
+  font-size: 16px;
+  padding: 16px 0;
+  color: #f7fafc;
+  background-color: #6415ff;
+  border-radius: 999px;
+  cursor: pointer;
+  border: none;
 }
 /* NAVIGATION BAR */
 
-.nav__container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.nav__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.nav__logo--area{
-    display: flex;
-    align-items: center;
-    margin-right: 24px;
+.nav__logo--area {
+  display: flex;
+  align-items: center;
+  margin-right: 24px;
 }
-.nav__logo--img{
-    width:40px;
-    height: 40px;
-    margin-right: 12px;
+.nav__logo--img {
+  width: 40px;
+  height: 40px;
+  margin-right: 12px;
 }
-.nav__logo--text{
-font-size: 24px;
-color: #243e63;
-font-weight: bold;
-transition: all 200ms ease;
+.nav__logo--text {
+  font-size: 24px;
+  color: #243e63;
+  font-weight: bold;
+  transition: all 200ms ease;
 }
-.nav__links{
-    display: flex;
-    align-items: center;
+.nav__links {
+  display: flex;
+  align-items: center;
 }
-.nav__link{
-    margin: 0 24px;
-    font-size: 14px;
-    font-weight: 500;
-    position: relative;
+.nav__link {
+  margin: 0 24px;
+  font-size: 14px;
+  font-weight: 500;
+  position: relative;
 }
-.nav__link--anchor{
-    color: #243e63;
-    transition: all 200ms ease;
-    
+.nav__link--anchor {
+  color: #243e63;
+  transition: all 200ms ease;
 }
-.nav__link--underline{
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    top: 1 ;
-    background-color: #6415FF;
-    margin-top: 4px;
-    opacity: 0;
-    transition: all 200ms ease;
+.nav__link--underline {
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  top: 1;
+  background-color: #6415ff;
+  margin-top: 4px;
+  opacity: 0;
+  transition: all 200ms ease;
 }
-.nav__link--login{
-    margin: 0 24px 0 48px
+.nav__link--login {
+  margin: 0 24px 0 48px;
 }
-.nav__link--sign-up{
-    margin: 0;
-    padding: 12px 32px;
-    background-color: #6415FF;
-    border-radius: 999px;
-    transition: all 300ms ease;
+.nav__link--sign-up {
+  margin: 0;
+  padding: 12px 32px;
+  background-color: #6415ff;
+  border-radius: 999px;
+  transition: all 300ms ease;
 }
-.nav__link--anchor--sign-up{
-    color: #FFF
+.nav__link--anchor--sign-up {
+  color: #fff;
 }
 /* NAVIGATION BAR___HOVER EFFECTS */
 
-.nav__logo--area:hover .nav__logo--text{
-color:#6415FF
+.nav__logo--area:hover .nav__logo--text {
+  color: #6415ff;
 }
-.nav__link:hover .nav__link--anchor{
-    color:#6415FF;
+.nav__link:hover .nav__link--anchor {
+  color: #6415ff;
 }
-.nav__link:hover .nav__link--underline{
-opacity: 1
+.nav__link:hover .nav__link--underline {
+  opacity: 1;
 }
-.nav__link--sign-up:hover{
-    filter: brightness(85%)
+.nav__link--sign-up:hover {
+  background-color: #550de4;
 }
 
 /* HEADER */
 
-.header__container{
-    padding: 96px 0;
+.header__container {
+  padding: 96px 0;
+  display: flex;
+  width: 100%;
+}
+.header__get-started {
+  width: 40%;
+}
+.header__img--wrapper {
+  width: 60%;
+}
+.header__get-started--title {
+  font-size: 48px;
+}
+.header__get-started--para {
+  font-size: 18px;
+  margin: 32px 0;
+  width: 100%;
+  max-width: 500px;
+}
+.header__get-started--sign-up {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  max-width: 440px;
+}
+.header__get-started--input {
+  padding: 20px 192px 20px 32px;
+  border-radius: 999px;
+  border-color: rgb(226, 232, 240);
+  border-style: solid;
+  height: 68px;
+  width: 100%;
+  transition: all 300ms ease;
+  outline-color: #6415ff;
+}
+.header__get-started--input::placeholder {
+  font-weight: 500;
+  color: lightgray;
+}
+
+.header__get-started--btn {
+  width: 100%;
+  max-width: 160px;
+  font-size: 16px;
+  padding: 16px 0;
+  color: #f7fafc;
+  background-color: #6415ff;
+  border-radius: 999px;
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+  margin: 0 8px 0 0;
+  border: none;
+  transition: all 300ms ease;
+}
+.header__get-started--customers-wrapper {
+  margin: 80px 0 0;
+  color: #a0aec0;
+}
+.header__get-started--img {
+  opacity: 0.5;
+  max-width: 380px;
+  margin: 16px 0 0;
+}
+.header__get-started--subtitle {
+  font-size: 12px;
+  font-weight: bold;
+  color: #a0aec0;
+}
+/* HEADER___HOVER EFFECTS */
+
+.header__get-started--input:hover {
+  border-color: rgb(172, 172, 172);
+}
+.header__get-started--btn:hover {
+  background-color: #550de4;
+}
+
+/* FEATURES */
+.features__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 96px 0;
+}
+.features--para {
+  max-width: 520px;
+  margin: 16px 0 0;
+  text-align: center;
+  font-size: 16px;
+}
+.features__service--wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 56px 0 0;
+  justify-content: center;
+}
+.features__service {
+  max-width: calc(100% / 3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 16px;
+  padding: 32px 8px;
+}
+.features__service--para {
+  width: 100%;
+  max-width: 200px;
+  font-size: 16px;
+}
+.features__img--wrapper {
+  border: solid;
+  border-color: rgb(224, 224, 224);
+  border-radius: 999px;
+  border-width: 1px;
+  width: 66px;
+  height: 66px;
+  padding: 20px;
+}
+.features__service--text-area {
+  margin: 8px 0 0 16px;
+}
+.features__service.easy{
+    position: relative;
+}
+.features__decorator{
+    position: absolute;
+    transform: scale(45%);
+    opacity: 30%;
+    right: -350px;
+    bottom: -300px
+}
+
+
+/* QUALITY */
+
+.quality__container {
+  display: flex;
+  padding: 96px 0;
+}
+.quality__text--wrapper {
+  width: 50%;
+  padding: 32px 0;
+}
+.quality__img--wrapper {
+  width: 50%;
+  display: flex;
+  align-items: center;
+}
+.quality__img--wrap{
+    position: relative;
+}
+.quality__img--decoration{
+    height: 80px;
+    width: 80px;
+    position: absolute;
+    bottom: -34px;
+    right: -36px;
+    z-index: -10;
+}
+.quality__img {
+  border: 2px solid;
+  border-color: rgb(231, 231, 231);
+  border-radius: 8px;
+  overflow: hidden;
+}
+.quality__text--para {
+  margin: 16px 0 0;
+  max-width: 560px;
+}
+.quality__text--btn {
+  margin: 32px 0 0;
+  transition: all 300ms ease;
+}
+.quality__text--h2 {
+  max-width: 540px;
+}
+/* QUALITY___HOVER EFFECTS */
+.quality__text--btn:hover {
+  background-color: #550de4;
+}
+
+/* STEPS */
+.steps__container {
+  display: flex;
+  padding: 96px 0;
+}
+.steps__img--wrapper {
+  width: 50%;
+  display: flex;
+  align-items: center;
+}
+.steps__img--wrap{
+    position: relative;
+}
+.steps__img {
+  max-width: 620px;
+}
+.steps__img--decoration{
+    position: absolute;
+    height: 160px;
+    width: 160px;
+    bottom: -84px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    z-index: -10;
+    
+}
+.steps__text-area--wrapper {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  padding: 32px 0;
+}
+.steps__list {
+  margin: 48px 0 0;
+}
+.steps__list--step {
+  display: flex;
+  margin: 32px 0 0;
+}
+.steps__list--step-text {
+  margin: 0 0 0 24px;
+}
+.steps__number {
+  font-size: 36px;
+  color: #cbd5e0;
+  font-weight: 600;
+}
+.steps__list--para {
+  font-size: 14px;
+  color: #718096;
+  margin: 12px 0 0;
+  max-width: 300px;
+}
+/* VALUES */
+.values__container {
+  display: flex;
+  padding: 96px 0;
+}
+.values__text-area {
+  width: 50%;
+}
+.values__text-area--h2 {
+  max-width: 500px;
+}
+.values__text-area--para {
+  font-size: 18px;
+  margin: 32px 0 0;
+  color: #7c8ba1;
+  font-weight: 500;
+  max-width: 550px;
+}
+.values__value--wrapper {
+  display: flex;
+}
+.values__value {
+  margin: 32px 32px 0 0;
+}
+.values__value.value2 {
+  margin: 32px 0 0;
+}
+.values__value-img--wrapper {
+  width: 36px;
+  height: 36px;
+}
+.values__value--wrap {
+  display: flex;
+  align-items: center;
+}
+.values__value--name {
+  font-size: 20px;
+  color: #243e63;
+  font-weight: 700;
+  margin: 0 0 0 12px;
+}
+.values__img--wrapper {
+  width: 50%;
+}
+.values__value--description {
+  font-size: 16px;
+  max-width: 260px;
+  margin: 16px 0 0;
+}
+.values__btn {
+  margin: 48px 0 0;
+  transition: all 300ms ease;
+}
+/* VALUES___HOVER EFFECTS */
+.values__btn:hover {
+  background-color: #550de4;
+}
+
+/* PRICING */
+.pricing__container {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+  padding: 96px 0;
+}
+.pricing__header{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.pricing__para {
+    max-width: 600px;
+    text-align: center;
+    margin: 16px 0 0;
+    color: #7c8ba1;
+    font-weight: 500;
+}
+.pricing__header--h5 {
+    margin: 16px;
+}
+.pricing__plans {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.pricing__plan {
+    width: calc(100% / 3);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 0 0 0;
+    margin: 64px 32px 0 0;
+    border: 1px solid;
+    border-radius: 0.5rem;
+    border-color: rgb(226, 232, 240);
+    border-width: 0px;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+    position: relative;
+    background: white;
+}
+.pricing__decoration{
+    position: absolute;
+    transform: scale(45%);
+    opacity: 30%;
+    left: -300px;
+    bottom: -300px;
+    z-index: -10
+}
+.pricing__plan.plan-business {
+    background: linear-gradient(
+        135deg,
+        rgb(76, 81, 191) 0%,
+        rgb(102, 126, 234) 100%
+        );
+    }
+    .pricing__plan--highlight {
+  position: absolute;
+  top: 0;
+  height: 8px;
+  width: 100%;
+  border-top-right-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
+  background: linear-gradient(
+    115deg,
+    rgb(56, 178, 172) 0%,
+    rgb(129, 230, 217) 100%
+  );
+}
+.pricing__plan--highlight.plan2 {
+  display: none;
+}
+.pricing__plan--highlight.plan3 {
+  background: linear-gradient(
+    115deg,
+    rgb(245, 101, 101) 0%,
+    rgb(254, 178, 178) 100%
+  );
+}
+.pricing__plan--section1 {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 32px;
+  line-height: 46px;
+}
+.plan__section1--name {
+  font-size: 20px;
+  color: #1a202c;
+  font-weight: 700;
+}
+.plan__section1--price {
+  font-size: 48px;
+  color: #1a202c;
+  font-weight: 700;
+  margin: 4px 0;
+}
+.plan__section1--duration {
+  font-size: 16px;
+  color: #a0aec0;
+  font-weight: 600;
+  letter-spacing: 1.5px;
+}
+.pricing__plan--section2 {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 32px;
+  border-bottom: solid;
+  border-top: solid;
+  border-color: rgb(226, 232, 240);
+  border-width: 2px;
+  text-align: center;
+  line-height: 26px;
+}
+.plan__section2--feature-title {
+  font-size: 20px;
+  color: #1a202c;
+  font-weight: 700;
+}
+.plan__section2--feature {
+  width: 100%;
+  font-size: 16px;
+  color: #718096;
+  margin: 20px 0 0;
+}
+.pricing__plan--section3 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 32px 64px;
+}
+.plan__section3--btn {
+  width: 100%;
+  max-width: 192px;
+  padding: 16px 32px;
+  border-radius: 999px;
+  font-size: 14px;
+  font-weight: 700;
+  color: #f7fafc;
+  background: linear-gradient(
+    115deg,
+    rgb(56, 178, 172) 0%,
+    rgb(129, 230, 217) 100%
+  );
+  border-style: none;
+  letter-spacing: 0.05rem;
+  transition: all 300ms ease;
+  cursor: pointer;
+}
+
+.plan__section1--name.plan-business,
+.plan__section1--price.plan-business,
+.plan__section2--feature-title.plan-business {
+  color: #f7fafc;
+}
+.plan__section1--duration.plan-business {
+  color: #edf2f7;
+}
+.plan__section2--feature.plan-business {
+  color: #e2e8f0;
+}
+.pricing__plan--section2.plan-business {
+  border-color: rgb(102, 126, 234);
+}
+.plan__section3--btn.plan-business {
+  background: #f7fafc;
+  color:#6415ff
+}
+.plan__section3--btn.plan-enterprise{
+    background: linear-gradient(
+        115deg,
+        rgb(245, 101, 101) 0%,
+        rgb(254, 178, 178) 100%
+      );
+}
+/* PRICING HOVER EFFECTS */
+
+.plan__section3--btn:hover{
+    transform: translate(1%, -1%);
+    box-shadow: 0 10px 15px 0 rgb(0, 0, 0, 0.15);
+    filter: brightness(96%)
+    
+}
+
+/* TESTIMONIALS */
+
+.testimonials__container{
+    display: flex;
+    padding: 96px 0;
+}
+.testimonials__img--wrapper{
+    width: 50%;
+    display: flex;
+    align-items: center;
+}
+.testimonials__header{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    padding: 0 0 0 64px;
+  }
+  .testimonials__header::-webkit-scrollbar{
+    display: non;
+  }
+    
+.testimonials__header--para{
+    max-width: 600px;
+    margin: 24px 0 0;
+    color: #7c8ba1;
+    font-weight: 500;
+}
+.header__feedback--wrapper{
+  display: flex;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+}
+.header__feedback{
+  margin-right: 400px;
+}
+.feedback__star--wrapper{
+    width: 120px;
+    margin: 40px 0 0;
+}
+.feedback__h3{
+  font-size: 20px;
+  color:#243e63;
+  margin: 16px 0 0;
+}
+.feedback__para{
+  font-size: 16px;
+  color:#4a5568;
+  margin: 16px 0 40px;
+}
+.feedback__navigation{
+  display: flex;
+  justify-content: space-between;
+}
+.feedback__profile{
+  display: flex;
+  align-items: center;
+}
+.feedback__img--wrapper{
+  width: 100%;
+  max-width: 80px;
+  margin-right: 24px;
+}
+.feedback__img{
+  border-radius: 999px;
+}
+.feedback__profile--h5{
+  font-size: 20px;
+  color:#243e63
+}
+.feedback__profile--para{
+  font-size: 16px;
+  color:#7c8ba1;
+  font-weight: 500;
+}
+.feedback__navigation--arrows{
+display: flex;
+align-items: center;
+}
+.feedback__navigation--btn{
+  border-style: none;
+  padding: 16px;
+  background-color: #edf2f7;
+  border-radius: 999px;
+  cursor: pointer;
+}
+.feedback__navigation--divider{
+  border: 1px solid;
+  border-width: 0;
+  border-right-width: 1px;
+  border-color: #d1d6db;
+  width: 24px;
+  height: 24px;
+  transform: translateX(-12px);
+}
+
+.gay__wrapper{
+  display: flex;
+  width: 100%;
+  overflow-x: auto;
+  scroll-behavior: smooth;
 }
