--- a/style.css
+++ b/style.css
@@ -9,9 +9,8 @@
 /* GENERICS */
 html{
   scroll-behavior: smooth;
-}
-html::-webkit-scrollbar{
-  display: none;
+  overflow-x: hidden;
+
 }
 a,
 li {
@@ -148,6 +147,7 @@ h3 {
   cursor: pointer;
   z-index:99999;
   display: none;
+  background: none;
 }
 .menu--open .menu__backdrop{
 visibility: visible;
@@ -165,6 +165,7 @@ left: 1px;
   transform: scale(150%);
   filter: opacity(50%);
   cursor: pointer;
+  background: none;
 }
 .menu__backdrop{
   position: absolute;
@@ -1107,11 +1108,16 @@ h5{
 background: url(assets/decorated-background-footer2.png);
 }
 }
+
+
 @media (max-width: 942px){
 .feedback__profile--description{
   max-width: 70px;
 }
 }
+
+
+
 @media (max-width: 767px) {
   h2{
     text-align: center;
@@ -1175,6 +1181,10 @@ align-items: center;
   .values__value{
     margin: 0
   }
+  .pricing__plan{
+    margin: 48px 0 0;
+    max-width: 400px;
+  }
   .testimonials__container{
     flex-direction: column;
     align-items: center;
@@ -1217,9 +1227,14 @@ align-items: center;
     text-align: center;
   }
   .footer__logo--wrapper{
-    max-width: 150px;
+    max-width: 150px;pricing
   }
 }
+
+
+
+
+
 @media (max-width: 639px){
   .header__get-started--sign-up{
     flex-direction: column;
@@ -1292,6 +1307,15 @@ width: 100%;
   }
   .feedback__profile--description{
     max-width: 300px;
+  }
+  .faqs__question.active{
+    padding: 16px 40px 200px;
+  }
+  .faqs__answer{
+    bottom: 100px
+  }
+  .faqs__answer--para{
+    font-size: 14px;
   }
   .footer__columns{
     flex-wrap: wrap;
