--- a/style.css
+++ b/style.css
@@ -846,7 +846,7 @@ right: 0
 display: flex;
 flex-direction: column;
 align-items: center;
-margin: 30px 0 0;
+margin: 20px 0 0;
 background-color: #edf2f7;
 border-radius: 6px;
 padding: 16px 40px;
@@ -854,7 +854,7 @@ width: 100%;
 max-width: 896px;
 transition: all 300ms ease;
 cursor: pointer;
-height: 7vh;
+min-height: 7vh;
 
 }
 .faqs__question{
@@ -877,21 +877,19 @@ margin-top: 4px;
   margin-left: 32px;
 }
 .faqs__answer{
-  margin-top: 16px;
-  bottom: 15px;
-  left: 50px;
   filter: opacity(0);
-  display: none;
   width: 100%;
+  text-align: start;
+  transition: all 300ms ease;
 }
 .faqs__answer--para{
   max-width: 700px ;
-  max-height: 80px;
   font-size: 1rem;
   color: #243e63;
+  font-size: 0px;
 }
 .faqs__question__wrap.active{
-  height: 20vh;
+  min-height: 18vh;
 
 }
 .active .question__arrow--wrap{
@@ -899,8 +897,11 @@ margin-top: 4px;
 }
 .active .faqs__answer{
   filter: opacity(100);
-  display: block;
+  padding: 16px 32px 16px 0;
 }
+  .active .faqs__answer--para{
+  font-size: 16px;
+  }
 /* GET-STARTED */
 
 .get-started__container{
@@ -1223,12 +1224,6 @@ align-items: center;
     text-align: center;
     padding: 0;
   }
-  .faqs__question__wrap{
-    height: 9vh;
-  }
-  .faqs__question__wrap.active{
-height: 24vh;
-  }
   .feedback__star--wrapper{
     margin: 0 auto;
   }
@@ -1340,12 +1335,6 @@ width: 100%;
   .feedback__profile--description{
     max-width: 300px;
   }
-  .faqs__question__wrap{
-    height: 10vh;
-  }
-  .faqs__question__wrap.active{
-height: 24vh;
-  }
   .footer__columns{
     flex-wrap: wrap;
     justify-content: center;
@@ -1393,73 +1382,25 @@ height: 24vh;
   text-align: center;
 }
 }
-
-@media (max-width:600px) {
-.faqs__question{
-  margin-top: 16px
-}
-  .faqs__question__wrap{
-height: 12vh;
-  }
-  .faqs__question__wrap.active{
-    height: 30vh;
-  }
-
-.question__arrow--wrap{
-  margin-left: 64px;
-}
-}
 @media (max-width:485px) {
   .faqs__question{
     margin-top: 16px
-  }
-    .faqs__question__wrap{
-  height: 14vh;
-    }
-    .faqs__question__wrap.active{
-      height: 35vh;
-    }
-  .question__arrow--wrap{
-    margin-left: 16px;
-  }
-}
-@media (max-width:422px) {
-  .faqs__question{
-    margin-top: 16px
-  }
-    .faqs__question__wrap{
-  height: 17vh;
-    }
-    .faqs__question__wrap.active{
-      height: 40vh;
-    }
-  .question__arrow--wrap{
-    margin-left: 8px;
   }
 }
 @media (max-width: 400px){
   .quality__img--decoration{
     transform: scale(50%);
-}
-}
-@media (max-width:350px) {
-  .faqs__question{
-    margin-top: 16px
   }
-    .faqs__question__wrap{
-  height: 18vh;
+    .active .faqs__answer{
+      padding: 16px 16px 16px 0;
     }
-    .faqs__question__wrap.active{
-      height: 45vh;
-    }
-  .question__arrow--wrap{
-    margin-left: 8px;
   }
+    @media (max-width:350px) {
   .faqs__question--h3{
     font-size: 16px;
   }
-  .faqs__answer--para{
-    font-size: 12px;
+  .active .faqs__answer--para{
+    font-size: 14px;
   }
 }
 
